// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$fonts $fonts are defined 1`] = `
Object {
  "android": Object {
    "black": Object {
      "fontFamily": "sans-serif",
      "fontWeight": "bold",
    },
    "bold": Object {
      "fontFamily": "sans-serif",
      "fontWeight": "bold",
    },
    "condensed": Object {
      "fontFamily": "sans-serif-condensed",
    },
    "condensed_light": Object {
      "fontFamily": "sans-serif-condensed",
      "fontWeight": "light",
    },
    "light": Object {
      "fontFamily": "sans-serif-light",
    },
    "medium": Object {
      "fontFamily": "sans-serif-medium",
    },
    "regular": Object {
      "fontFamily": "serif",
    },
    "thin": Object {
      "fontFamily": "sans-serif-thin",
    },
  },
  "ios": Object {},
}
`;

exports[`$fonts config/$fonts are defined 1`] = `
Object {
  "android": Object {
    "black": Object {
      "fontFamily": "sans-serif",
      "fontWeight": "bold",
    },
    "bold": Object {
      "fontFamily": "sans-serif",
      "fontWeight": "bold",
    },
    "condensed": Object {
      "fontFamily": "sans-serif-condensed",
    },
    "condensed_light": Object {
      "fontFamily": "sans-serif-condensed",
      "fontWeight": "light",
    },
    "light": Object {
      "fontFamily": "sans-serif-light",
    },
    "medium": Object {
      "fontFamily": "sans-serif-medium",
    },
    "regular": Object {
      "fontFamily": "sans-serif",
    },
    "thin": Object {
      "fontFamily": "sans-serif-thin",
    },
  },
  "ios": Object {},
}
`;
